--- a/profile.html
+++ b/profile.html
@@ -16,13 +16,20 @@
     }
 </style>
 <body>
-    <table cellspacing="20">
+      <nav class="container">
+        <strong><h3><a href="index.html">Home</a>
+        <a href="profile.html">About</a>
+        <a href="skills.html">Skills</a>
+        <a href="education.html">Education</a>
+        <a href="contact.html">Contact</a></h3></strong>
+      </nav>
+      <table cellspacing="20">
         <tr>
           <td><img src="Me.png" alt="savona profile picture"></td>
           <td><h1>Savona Shrestha</h1>
           <p>I am Savona Shrestha. I was born in Kathmandu, Nepal. Currently, I am doing my Bachelors in Computer Science. I have always enjoyed learning new things and have been passionate about computers ever since i was a kid.</p></td>
         </tr>  
-    </table>
+      </table>
       <hr>
       <a class="btn" href="skills.html">More About Me</a>
 </body>
