--- a/skills.html
+++ b/skills.html
@@ -16,41 +16,26 @@
     }
 </style>
 <body>
-    <div class="skills">
-        <h1>My Skills.</h1>
-        <div class="skill-row">
-          <img class="code-img" src="design.gif" alt="design">
-          <h3>Design & Development</h3>
-          <p>I started to have interest in coding when i was 12 years old. I always had interests in making websites. I started web development through an interest in creating interactive and visually appealing websites. I learned HTML for structure, CSS for styling, and JavaScript for interactivity and still I am learning.</p>
-        </div>
+      <nav class="container">
+        <strong><h3><a href="index.html">Home</a>
+        <a href="profile.html">About</a>
+        <a href="skills.html">Skills</a>
+        <a href="education.html">Education</a>
+        <a href="contact.html">Contact</a></h3></strong>
+      </nav>
+      <div class="skills">
+         <h1>My Skills.</h1>
+          <div class="skill-row">
+            <img class="code-img" src="design.gif" alt="design">
+            <h3>Design & Development</h3>
+            <p>I started to have interest in coding when i was 12 years old. I always had interests in making websites. I started web development through an interest in creating interactive and visually appealing websites. I learned HTML for structure, CSS for styling, and JavaScript for interactivity and still I am learning.</p>
+          </div>
         <div class="skill-row">
           <img class="dance-img" src="ballet.png" alt="dance">
           <h3>Dance</h3>
           <p>I started dancing at a young age and discovered a passion for it. I took classes, performed, and dance became a central part of my life. It provides self-expression and continues to bring joy and fulfillment.</p>
         </div>
         <hr>
-         <ul class="skill-bars">
-            <li>
-                <div class="progress percent90"><span>70%</span></div>
-                <strong>HTML</strong>
-            </li>
-            <li>
-                <div class="progress percent85"><span>70%</span></div>
-                <strong>CSS</strong>
-            </li>
-            <li>
-                <div class="progress percent70"><span>50%</span></div>
-                <strong>Java and Python</strong>
-            </li>
-            <li>
-                <div class="progress percent75"><span>80%</span></div>
-                <strong>Wordpress</strong>
-            </li>
-
-         </ul> <!-- /skill-bars -->	
-         <hr>
-    </div>
-
-        	
+     </div>	
 </body>
 </html>
