--- a/education.html
+++ b/education.html
@@ -16,22 +16,29 @@
     }
 </style>
 <body>
+       <nav class="container">
+          <strong><h3><a href="index.html">Home</a>
+          <a href="profile.html">About</a>
+          <a href="skills.html">Skills</a>
+          <a href="education.html">Education</a>
+          <a href="contact.html">Contact</a></h3></strong>
+        </nav>
         <h1>Education</h1>
         <div class="timeline-header">
-                <h3>Bachelor Degree</h3>
-                <p>Sep 2022 - Present</p>
+             <h3>Bachelor Degree</h3>
+             <p>Sep 2022 - Present</p>
         </div>
         <div class="timeline-content">
-                  <a href="https://heraldcollege.edu.np/"><h4>Herald College</h4></a>  
-                    <p>I recently completed my first semester of my Bachelor's in IT. I learned how to create simple websites, a valuable skill in today's tech-driven world. Excited to see what the future semesters will bring!</p>
+             <a href="https://heraldcollege.edu.np/"><h4>Herald College</h4></a>  
+             <p>I recently completed my first semester of my Bachelor's in IT. I learned how to create simple websites, a valuable skill in today's tech-driven world. Excited to see what the future semesters will bring!</p>
         </div>
         <div class="timeline-header">
-                    <h3>NEB</h3>
-                    <p>2020 - 2022</p>
+              <h3>NEB</h3>
+              <p>2020 - 2022</p>
         </div>
         <div class="timeline-content">
-                    <a href="https://www.trinity.edu.np/"><h4>Trinity International SS & College</h4></a>
-                    <p>I graduated from Trinity International SS & College, majoring in Biology. Proud to have finished this challenging journey and expanded my knowledge in the field.</p>
+              <a href="https://www.trinity.edu.np/"><h4>Trinity International SS & College</h4></a>
+              <p>I graduated from Trinity International SS & College, majoring in Biology. Proud to have finished this challenging journey and expanded my knowledge in the field.</p>
         </div>       
 </body>
 </html>
