--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,13 @@
     }
 </style>
 <body>
+     <nav class="container">
+        <strong><h3><a href="index.html">Home</a>
+        <a href="profile.html">About</a>
+        <a href="skills.html">Skills</a>
+        <a href="education.html">Education</a>
+        <a href="contact.html">Contact</a></h3></strong>
+     </nav>
     <div class="contact">
     <h1>My Contact Details</h1>
     <form action="mailto:info@shresthasavona001@gmail.com" method="post" enctype="text/plain">
