--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a href="contact.html">Contact</a></h3></strong>
      </nav>
     <div class="contact">
-    <h1>My Contact Details</h1>
+    <h1>Contact Me</h1>
     <form action="mailto:info@shresthasavona001@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName" value=""><br>
