--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
           <div class="skill-row">
             <img class="code-img" src="design.gif" alt="design">
             <h3>Design & Development</h3>
-            <p>I started to have interest in coding when i was 12 years old. I always had interests in making websites. I started web development through an interest in creating interactive and visually appealing websites. I learned HTML for structure, CSS for styling, and JavaScript for interactivity and still I am learning.</p>
+            <p>I started to have interest in coding when i was 12 years old. I always had interests in making websites. I started web development through an interest in creating interactive and visually appealing websites. I learned HTML for structure, CSS for styling, and still I am learning.</p>
           </div>
         <div class="skill-row">
           <img class="dance-img" src="ballet.png" alt="dance">
